--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "npm run build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.7",
